# opengl_sandbox

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
resources/shaders/: light.fragment.glsl  light.vertex.glsl  main.fragment.glsl  main.vertex.glsl  shader.fs  shader.vs
src/: glfw_window.cpp  glfw_window.hpp  main.cpp  sdl2_window.cpp  sdl2_window.hpp
src/camera/: camera.cpp  camera.hpp
src/loaders/: load_model.cpp  load_shader.cpp  load_texture.cpp  loaders.hpp  resource_manager.cpp  resource_manager.hpp
src/mesh/: mesh.cpp  mesh.hpp
src/render/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  render.cpp  render.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/shader/: shader.cpp  shader.hpp
src/window/: events.cpp  events.hpp  glfw.cpp  sdl2.cpp  states.hpp  window.cpp  window.hpp
